# HandyReader

./: .gitignore  AGENTS.md  PrivayPolicy.md  README.md  apikey.properties  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: AGENTS.md  android-key.jks  build.gradle.kts  google-services.json  proguard-rules.pro
app/resources/: 未标题-1.psd
app/resources/store/: 置顶大图.psd
app/schemas/com.wxn.reader.data.source.local.AppDatabase/: 1.json  2.json  3.json
app/src/androidTest/java/com/ricdev/uread/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/documentation/: PRIVACY_POLICY.md
app/src/main/java/com/ricdev/uread/: MainActivity.kt  SplashViewModel.kt
app/src/main/java/com/ricdev/uread/di/: AppModule.kt
app/src/main/java/com/ricdev/uread/navigation/: LocalNavController.kt  PurchaseHelperController.kt  SetupNavGraph.kt
app/src/main/java/com/ricdev/uread/util/: AppVersion.kt  PurchaseHelper.kt
app/src/main/java/com/wxn/reader/: BookApplication.kt  MainActivity.kt  SplashViewModel.kt
app/src/main/java/com/wxn/reader/di/: ActivityModule.kt  AppModule.kt  NetworkModule.kt
app/src/main/java/com/wxn/reader/events/: VolumeEventBus.kt
app/src/main/java/com/wxn/reader/navigation/: LocalNavController.kt  PurchaseHelperController.kt  Screens.kt  SetupNavGraph.kt
app/src/main/java/com/wxn/reader/service/: SimpleTtsCallback.kt  TtsError.kt  TtsMediaSessionCallback.kt  (+3 more)
app/src/main/res/drawable/: ic_tts_notification.xml  splash_icon.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: locales_config.xml  network_security_config.xml
app/src/test/java/com/ricdev/uread/: ExampleUnitTest.kt
aso/: AGENTS.md  build.gradle.kts
aso/src/main/kotlin/com/wxn/aso/: AsoComponent.kt  Main.kt
base/: AGENTS.md  build.gradle.kts  proguard-rules.pro
base/src/androidTest/java/com/wxn/base/: ExampleInstrumentedTest.kt
base/src/main/res/values/: strings.xml
base/src/test/java/com/wxn/base/: ExampleUnitTest.kt
bookparser/: AGENTS.md  build.gradle.kts
bookparser/src/androidTest/java/com/wxn/bookparser/: ExampleInstrumentedTest.kt
bookparser/src/main/java/com/wxn/bookparser/: FIleSearcher.kt  FileParser.kt  ProvideFileFormatExtConstant.kt  TextParser.kt
bookparser/src/main/res/values/: strings.xml
bookparser/src/test/java/com/wxn/bookparser/: ExampleUnitTest.kt
bookread/: AGENTS.md  build.gradle.kts
bookread/src/androidTest/java/com/wxn/bookread/: ExampleInstrumentedTest.kt
bookread/src/main/java/com/wxn/bookread/: Common.kt  ReadBook.kt
bookread/src/main/res/layout/: view_book_page.xml
bookread/src/main/res/values/: colors.xml  strings.xml
bookread/src/test/java/com/wxn/bookread/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jp2forandroid/: AGENTS.md  build.gradle
jp2forandroid/src/main/cpp/: openjpg.cpp
jp2forandroid/src/main/java/com/gemalto/jp2/: JP2Encoder.java
mobi/: AGENTS.md  build.gradle.kts
mobi/src/androidTest/java/com/wxn/mobi/: ExampleInstrumentedTest.kt
mobi/src/main/cpp/: CMakeLists.txt  appmobi.cpp
mobi/src/main/cpp/base64/: CMakeLists.txt  decode.h  encode.h
mobi/src/main/cpp/cssparser/: CMakeLists.txt
mobi/src/main/cpp/cssparser/Applicability/: HTMLCSSRefAdaptor.cpp  HTMLCSSRefAdaptor.h  PseudoSelectorRefChiefJudge.cpp  PseudoSelectorRefChiefJudge.hpp
mobi/src/main/cpp/cssparser/CSSParser/: CSSLex.cpp  CSSLexStatus.h  CSSParser.cpp
mobi/src/main/cpp/cssparser/CSSParser/Selectors/: Selector.hpp
mobi/src/main/cpp/include/libxml/: xmlversion.h
mobi/src/main/cpp/libmobi/: CMakeLists.txt
mobi/src/main/cpp/libmobi/src/: CMakeLists.txt  encryption.c  encryption.h  miniz.c  miniz.h  mobi.h  out_export.h  read.c  util.c  util.h
mobi/src/main/cpp/libmobi/tools/: mobitool.c
mobi/src/main/cpp/threadlibs/: CMakeLists.txt  SynchronizedList.h  algorithm.h  copy_exception.h  data_to_reclaim.h  handler_thread.h  hierarchical_mutex.cpp  hierarchical_mutex.h  hp_owner.h  interrupt_thread.h  lock_free_stack.h  scoped_interrupt_thread.h  scoped_thread.h  spinlock_mutex.h  thread_msg.h  threadpool.h  threadsafe_list.h  threadsafe_lookup_table.h  threadsafe_queue.h  threadsafe_stack.h
mobi/src/main/cpp/tidy-html5/: CMakeLists.txt
mobi/src/main/cpp/unzip101e/: CMakeLists.txt  unzip101e.vcxproj
mobi/src/main/cpp/util/: app_ext.cpp  app_ext.h  bitmap_ext.cpp  bitmap_ext.h  book_util.h  chapter_count.h  crc_util.cpp  crc_util.h  css_ext.cpp  css_ext.h  css_info.h  doc_text.h  epub_util.cpp  epub_util.h  fb2_util.cpp  fb2_util.h  file_ext.cpp  file_ext.h  file_searcher.cpp  file_searcher.h  log.h  meta_data.h  mobi_util.cpp  mobi_util.h  nav_point.h  string_ext.cpp  string_ext.h  tag_info.h  tidyh5_ext.cpp  tidyh5_ext.h  tinyxml2.cpp  tinyxml2.h  xml2_ext.cpp  xml2_ext.h  xml_ext.cpp  xml_ext.h  zip_ext.cpp  zip_ext.h
mobi/src/main/cpp/util/mobi/: common.c  common.h  mobidrm.c  mobidrm.h  mobimeta.c  mobimeta.h  mobitool.c  mobitool.h  save_epub.cpp  save_epub.h
mobi/src/main/java/com/wxn/mobi/: EpubParser.kt  Fb2Parser.kt  FileSearcher.kt  MobiParser.kt
mobi/src/test/java/com/wxn/mobi/: ExampleUnitTest.kt
resources/: book_logo.psd  商店横幅图.ai  未标题-2.psd
tests/: test_invariant_openjpg.cpp
text2speech/: AGENTS.md  build.gradle.kts  readme.md
text2speech/src/androidTest/java/net/gotev/speech/: ExampleInstrumentedTest.java
text2speech/src/main/java/net/gotev/speech/: DefaultLoggerDelegate.java  DelayedOperation.java  Logger.java  Speech.java
text2speech/src/main/res/values/: themes.xml
text2speech/src/main/res/values-night/: themes.xml
(+475 files in other folders)
